--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: gbuchdahl@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Your one-stop shop for everything Hunter Athletics News.
 baseurl: "/aasite" # the subpath of your site, e.g. /blog
-url: "https://gbuchdahl.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  gbuchdahl
 
