kept working on aow page

--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,16 @@ gems:
 
 #Others
 markdown: kramdown
+
+#categories
+collections:
+  category:
+    output: true
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: category
+    values:
+      layout: "category"
